# Coding

./: 0-1KnapsackProblem.cpp  1info.cpp  A-ABC.cpp  AddNumbersLinkedList.cpp  Array_queries.cpp  B-RoofConstruction.cpp  BSTfromPreorder2.cpp  BSTtoBBST.cpp  BTfromPreOrder.cpp  BTtoDLL.cpp  BipartiteGraph.cpp  BottomViewBinaryTree.cpp  CMakeLists.txt  CheckMirrorInN-aryTree.cpp  CoinChange.cpp  CycleInDirectedGraph.cpp  CycleInUndirectedGraph.cpp  DeleteNodeInBST.cpp  DuplicateSubtrees.cpp  ExamPaperDistribution.cpp  FaultyPendulum.cpp  FractionalKnapsack.cpp  FrogJump.cpp  HuffmanEncoding.cpp  IPL2021.cpp  InorderSuccessorBST.cpp  InsertionPointTwoLL.cpp  InvalidParentheses.cpp  IsomorphicTree.cpp  JobSequencing.cpp  LargestBST.cpp  LongestTaskPath.cpp  LowestCommonAncestor.cpp  MaxProductSubset.cpp  MaximizeSumKNegations.cpp  MaximumSumOfNon-adjacentNodes.cpp  MinDistanceBetweenTwoNodes.cpp  MinimumSpanningTree.cpp  MyownLinkedList.cpp  NMeetings.cpp  (+91 more)
DP/: frog1.cpp  frog1.cpp__tests  frog2.cpp
Tricks/: Questions  Striver Binary Search  Striver DP  Striver Graph  Striver Segment Tree  Striver Trie  Tricks  Utkarsh Maths  sql query  to do
hacker cup/: b1.cpp  b1.cpp__tests  b11.txt  b2.cpp  b2.cpp__tests  b2.txt  newB2.cpp  newB2.cpp__tests  outputf.txt  secondHand.cpp  second_friend_input.txt
kickstart/: a2.cpp  curling.cpp  happySubarray.cpp  matchingPalindrome.cpp  walktober.cpp
old/: CMakeLists.txt  directed_graph.cpp  sorting.cpp
tests/: Array_queries.cpp__tests  MaxProductSubset.cpp__tests  MaximizeSumKNegations.cpp__tests  longestCommonSubstring.cpp__tests  (+3 more)
(+5 files in other folders)
