cmake_minimum_required(VERSION 3.21)
project(sublime)

set(CMAKE_CXX_STANDARD 14)

add_executable(testing testing.cpp)
add_executable(nQueen nQueen.cpp)
add_executable(RatInMaze RatInMaze.cpp)
add_executable(LargestBST.cpp LargestBST.cpp)
add_executable(BSTfromPreorder2 BSTfromPreorder2.cpp)
add_executable(xequaly xequaly.cpp)
add_executable(InorderSuccessorBST InorderSuccessorBST.cpp)
add_executable(DeleteNodeInBST DeleteNodeInBST.cpp)
add_executable(MinDistanceBetweenTwoNodes MinDistanceBetweenTwoNodes.cpp)
add_executable(B-RoofConstruction B-RoofConstruction.cpp)
add_executable(LowestCommonAncestor LowestCommonAncestor.cpp)
add_executable(dubplicateSubTreeInBT dubplicateSubTreeInBT.cpp)
add_executable(B-BTtoDLL BTtoDLL.cpp)
add_executable(main main.cpp)
add_executable(wordBreak wordBreak.cpp)
add_executable(nextPermutation nextPermutation.cpp)
