cmake_minimum_required(VERSION 3.20)
project(l450Sol)

set(CMAKE_CXX_STANDARD 14)

add_executable(l450Sol main.cpp)
add_executable(bt binary_tree.cpp)
add_executable(avl_tree avl_tree.cpp)
add_executable(red_black_tree red_black_tree.cpp)
add_executable(TreeNode TreeNode.cpp)
add_executable(Graph graph.cpp)
add_executable(Directed_Graph directed_graph.cpp)
add_executable(program program.cpp)
add_executable(sorting sorting.cpp)
